<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nebel.TV</string>
    <string name="menu_mood">Mood select</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_product_tour">Product Tour</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_update_frontend">Update Front-End</string>
    
<string name="top_friends_feed">Feed</string>
    <string name="top_whats_hot">Popular</string>
    <string name="top_whats_close">Near Me</string>
    <string name="top_watch_later">Watch Later</string>
    <string name="top_recently_viewed">History</string>
    
    <string name="top_content">My Content</string>
    <string name="top_wallet">My Wallet</string>
    <string name="top_settings">Settings</string>
    <string name="top_space"></string>
 <string name="top_pictures">Pictures</string>
    <string name="top_recommended">Recommended</string>
    
<string name="mood_family">Family</string>
    <string name="mood_kids">Kids</string>
    <string name="mood_romance">Romance</string>
    
<string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="version">Version: %1$s</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="unknown_version">unknown</string>
    <string name="nebel_main_url">http://www.nebel.tv</string>
    <string name="about_msg">Nebel.TV is a revolutionary new project aimed at \nrevitalizing the World\'s most common entertainment \nplatform - television.</string>
    <string name="external_storage_unmounted">External storage is unmounted. Loading default config</string>
    <string name="external_storage_read_only">Can\'t write config file to the external storage(it is read-only). Loading default config</string>
    <string name="invalid_extenal_config">Invalid external config. Loading the default one</string>
    <string name="categories_title">Categories</string>
    <string name="category_title">Category view</string>
    <string name="videos_are_not_downloaded">Video content isn\'t available</string>
    <string name="policy_title">Application use policy</string>
    <string name="policy_btn_accept">Accept</string>
    <string name="policy_btn_decline">Decline</string>
    <string name="product_feedback">product feedback</string>
    <string name="feature_proposal">feature proposal</string>
    <string name="bug_report">bug report</string>
    <string name="project_contribution">project contribution</string>
    <string name="other">other</string>
    <string name="feedback_email_title_big_part">Email</string>
    <string name="feedback_email_title_small_part">(optional):</string>
    <string name="feedback_type_title">Feedback on:</string>
    <string name="enter_feedback_title">Enter feedback message</string>
    <string name="feedback_email_msg_field">Email: %1$s</string>
    <string name="feedback_type_msg_field">Feedback type: %1$s</string>
    <string name="feedback_msg_field">Feedback message:\n%1$s</string>
    <string name="confirm">Confirm</string>
    <string name="feedback_text_error_msg">Please enter mandatory feedback message</string>
    <string name="feedback_success_msg">Feedback was successfully submitted. Thank you!</string>
    <string name="feedback_failure_msg">Feedback submission failed. Please try again later.</string>
    <string name="frontend_update_msg">Updating Front-End HTML package &#8230;</string>
    <string name="frontend_update_error_msg">Front-End update error: %1$s</string>
    <string name="frontend_update_success_msg">Front-End was successfully updated</string>
    <string name="mood_title">Mood Select</string>
    <string name="player_loading">Video metadata is loading. Please wait</string>
    <string name="player_buffering">Video is buffering. Please wait</string>
    
</resources>