<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_product_tour"
        android:showAsAction="never"
        android:title="@string/menu_product_tour"/>
    
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    
    <item
        android:id="@+id/menu_donate"
        android:showAsAction="never"
        android:title="@string/menu_donate"/>

    <item
        android:id="@+id/menu_feedback"
        android:showAsAction="never"
        android:title="@string/menu_feedback"/>
        
    <item
        android:id="@+id/menu_update_frontend"
        android:showAsAction="never"
        android:title="@string/menu_update_frontend"/>
</menu>
